--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "sharkslove嗲应旺",
   "main": "app.js",
   "dependencies": {
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "bower": "^1.7.9",
     "express": "^4.14.0",
