--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "bower": "^1.7.9",
+    "connect-mongo": "^1.3.2",
     "express": "^4.14.0",
+    "express-session": "^1.14.0",
     "jade": "^1.11.0",
     "moment": "^2.14.1",
     "mongoose": "^4.5.3",
