--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "moviesite",
   "version": "1.0.0",
-  "description": "sharkslove嗲应旺",
+  "description": "sharkslove",
   "main": "app.js",
   "dependencies": {
     "bcryptjs": "^2.3.0",
@@ -13,6 +13,7 @@
     "jade": "^1.11.0",
     "moment": "^2.14.1",
     "mongoose": "^4.5.3",
+    "morgan": "^1.7.0",
     "serve-static": "^1.11.1",
     "underscore": "^1.8.3"
   },
